--- a/post29/src/main/res/layout/fragment_identifiers.xml
+++ b/post29/src/main/res/layout/fragment_identifiers.xml
@@ -33,4 +33,12 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/serialTitleTextView"/>
 
+    <Button
+        android:id="@+id/goToNextScreenButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/go_to_next_screen"
+        app:layout_constraintTop_toBottomOf="@id/serialTextView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
