--- a/post29/src/main/res/navigation/nav_graph.xml
+++ b/post29/src/main/res/navigation/nav_graph.xml
@@ -21,6 +21,18 @@
         android:id="@+id/PrivacyChangesFragment"
         android:name="com.example.post29.PrivacyChangesFragment"
         android:label="@string/privacy_changes_label"
+        tools:layout="@layout/fragment_privacy_changes">
+
+        <action
+            android:id="@+id/action_PrivacyChangesFragment_to_NDKFragment"
+            app:destination="@id/NDKFragment" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/NDKFragment"
+        android:name="com.example.post29.NDKFragment"
+        android:label="@string/ndk_label"
         tools:layout="@layout/fragment_privacy_changes" />
 
 </navigation>
