--- a/post29/src/main/res/layout/fragment_ndk.xml
+++ b/post29/src/main/res/layout/fragment_ndk.xml
@@ -40,4 +40,12 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/bionicPathsHint" />
 
+    <Button
+        android:id="@+id/goToNextScreenButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/go_to_next_screen"
+        app:layout_constraintTop_toBottomOf="@id/executableMemoryTypeHint" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
