--- a/post29/src/main/res/navigation/nav_graph.xml
+++ b/post29/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/IdentifiersFragment"
-        android:name="com.example.post29.IdentifiersFragment"
+        android:name="com.example.post29.identifiers.IdentifiersFragment"
         android:label="@string/identifiers_fragment_label"
         tools:layout="@layout/fragment_identifiers">
 
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/PrivacyChangesFragment"
-        android:name="com.example.post29.PrivacyChangesFragment"
+        android:name="com.example.post29.pc.PrivacyChangesFragment"
         android:label="@string/privacy_changes_label"
         tools:layout="@layout/fragment_privacy_changes">
 
@@ -31,8 +31,20 @@
 
     <fragment
         android:id="@+id/NDKFragment"
-        android:name="com.example.post29.NDKFragment"
+        android:name="com.example.post29.ndk.NDKFragment"
         android:label="@string/ndk_label"
-        tools:layout="@layout/fragment_privacy_changes" />
+        tools:layout="@layout/fragment_ndk">
+
+        <action
+            android:id="@+id/action_NDKFragment_to_SecurityFragment"
+            app:destination="@id/SecurityFragment" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/SecurityFragment"
+        android:name="com.example.post29.security.SecurityFragment"
+        android:label="@string/security_label"
+        tools:layout="@layout/fragment_security" />
 
 </navigation>
