--- a/post29/src/main/res/layout/fragment_security.xml
+++ b/post29/src/main/res/layout/fragment_security.xml
@@ -95,4 +95,12 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/goToNextScreenButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/go_to_next_screen"
+        app:layout_constraintTop_toBottomOf="@id/tlsLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
