--- a/pre29/src/main/res/layout/fragment_privacy_changes.xml
+++ b/pre29/src/main/res/layout/fragment_privacy_changes.xml
@@ -20,4 +20,12 @@
         android:text="@string/access_external_storage_button"
         app:layout_constraintTop_toBottomOf="@id/accessScopedStorageTextView" />
 
+    <Button
+        android:id="@+id/goToNextScreenButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/go_to_next_screen"
+        app:layout_constraintTop_toBottomOf="@id/accessScopedStorageButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
