--- a/pre29/src/main/res/navigation/nav_graph.xml
+++ b/pre29/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/IdentifiersFragment"
-        android:name="com.example.pre29.IdentifiersFragment"
+        android:name="com.example.pre29.identifiers.IdentifiersFragment"
         android:label="@string/identifiers_fragment_label"
         tools:layout="@layout/fragment_identifiers">
 
@@ -24,13 +24,13 @@
 
     <fragment
         android:id="@+id/AdminInfoFragment"
-        android:name="com.example.pre29.AdminInfoFragment"
+        android:name="com.example.pre29.admininfo.AdminInfoFragment"
         android:label="@string/identifiers_fragment_label"
         tools:layout="@layout/fragment_admin_info" />
 
     <fragment
         android:id="@+id/CameraAndConnectivityFragment"
-        android:name="com.example.pre29.CameraAndConnectivityFragment"
+        android:name="com.example.pre29.camera.CameraAndConnectivityFragment"
         android:label="@string/camera_fragment_label"
         tools:layout="@layout/fragment_camera_and_connectivity">
 
@@ -42,8 +42,20 @@
 
     <fragment
         android:id="@+id/PrivacyChangesFragment"
-        android:name="com.example.pre29.PrivacyChangesFragment"
+        android:name="com.example.pre29.pc.PrivacyChangesFragment"
         android:label="@string/privacy_changes_label"
-        tools:layout="@layout/fragment_privacy_changes" />
+        tools:layout="@layout/fragment_privacy_changes">
+
+        <action
+            android:id="@+id/action_PrivacyChangesFragment_to_WiFiP2PFragment"
+            app:destination="@id/WiFiP2PFragment" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/WiFiP2PFragment"
+        android:name="com.example.pre29.wifip2p.WifiPeerToPeerFragment"
+        android:label="@string/wifi_p2p_label"
+        tools:layout="@layout/fragment_wifi_p2p" />
 
 </navigation>
