--- a/post29/src/main/res/layout/fragment_wifi_p2p.xml
+++ b/post29/src/main/res/layout/fragment_wifi_p2p.xml
@@ -73,4 +73,13 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/goToNextScreenButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/go_to_next_screen"
+        app:layout_constraintTop_toBottomOf="@id/wifiP2pLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
