--- a/post29/src/main/res/layout/fragment_telephony.xml
+++ b/post29/src/main/res/layout/fragment_telephony.xml
@@ -174,4 +174,12 @@
 
     </FrameLayout>
 
+    <Button
+        android:id="@+id/goToNextScreenButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/go_to_next_screen"
+        app:layout_constraintTop_toBottomOf="@id/callRedirectionLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
